Add README and tasks configuration for JavaFX compilation